# collab-runner-rce

./: .gitignore  Dockerfile  README.md  build_python_image.sh  go.mod  go.sum  run_worker.sh
pkg/types/: types.go
pkg/utils/: utils.go
services/agent/: agent.service  main.go
services/worker/: main.go  vm.go  vmmanager.go
state-parser/: .dockerignore  pyproject.toml
state-parser/src/state_parser/: main.py
